--- a/book.toml
+++ b/book.toml
@@ -15,4 +15,4 @@ git-repository-url = "https://github.com/newhinton/round-sync-documentation"
 git-repository-icon = "fa-github"
 edit-url-template = "https://github.com/newhinton/round-sync-documentation/edit/master/{path}"
 
-additional-css = ["theme/style.css"]
+additional-css = ["theme/style.css", "theme/fork-awesome.min.css"]
